[metadata]
name = numma
author = Lisa Röttjers
author-email = lisa.rottjers@kuleuven.be
summary = Null models for replicate networks
license = Apache-2.0
description-file =
    README.md
home-page = https://github.com/ramellose/numma
requires-python = >=3.5
classifier =
    Development Status :: 1 - Alpha/Unstable
    Environment :: Console
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python

[files]
packages =
    numma

[entry_points]
pbr.config.drivers =
    plain = pbr.cfg.driver:Plain
console_scripts =
    numma = numma.main:main
