[metadata]
name = anuran
author = Lisa Röttjers
author-email = lisa.rottjers@kuleuven.be
summary = Null models for replicate association networks
license = Apache-2.0
description-file =
    README.md
home-page = https://github.com/ramellose/anuran
requires-python = >=3.5
classifier =
    Development Status :: 2 - Beta/Unstable
    Environment :: Console
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python

[files]
packages =
    anuran

[entry_points]
pbr.config.drivers =
    plain = pbr.cfg.driver:Plain
console_scripts =
    anuran = anuran.main:main
